--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,9 +5,13 @@
 }
 
 header {
-    background-color: #393939;
+    background-color: black;
+    color: white;
     width: 100%;
     height: 50px;
+    position: fixed;
+    z-index: 1;
+    
 }
 
 header h1 {
@@ -19,10 +23,13 @@ header h1 {
 
 main ul {
     list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    
 }
 
 .music-list {
-    margin-top: 20px;
+    margin-top: 80px;
 }
 
 .card {
